# midonet-openstack

./: README  release_debian.sh
ci/: add_changelog.py  changelog.tmpl
debian/: changelog  control  copyright  midolman-agent-bin.install  midolman-agent-bin.substvars  midolman-agent-bin.upstart  midolman-agent-common.config  midolman-agent-common.postinst  midolman-agent-common.templates  python-midolman-nova.install  python-midolman-nova.substvars  (+2 more)
etc/: Makefile.am  (+1 more)
src/: Makefile.am
src/midolman/: __init__.py  config.py  ieee_802.py  openvswitch.py  tap.py
src/midolman/agent/: client.py  config.py  openvswitch.py  server.py
src/midolman/common/: flags.py  openstack.py
src/midolman/midonet/: __init__.py  client.py  test_bridges.py  test_tenants.py
src/midolman/nova/: flags.py
src/midolman/nova/api/openstack/contrib/: mido_floating_ips.py  networks.py
src/midolman/nova/compute/: manager.py
src/midolman/nova/network/: api.py  ipam.py  l3.py  manager.py  midonet_connection.py  sg.py
src/midolman/nova/virt/libvirt/: connection.py  libvirt.xml.template  vif.py
src/midolman/nova/virt/xcp/: vif.py
src/midolman/nova/virt/xenapi/: vif.py
src/midolman/nova/virt/xenapi/scripts/: vif
src/midolman/quantum/: midonet_plugin.ini  plugin.py
src/midonet/common/: openstack.py
src/midonet/nova/: midonet_connection.py
src/midonet/nova/network/: midonet_lib.py  sg.py
src/midonet/nova/virt/libvirt/: vif.py
src/nova/api/openstack/contrib/: networks.py
src/nova/network/: api.py  manager.py
src/nova/virt/libvirt/: bfv_connection.py  libvirt.xml.template
(+4 files in other folders)
